builder/tests/12-invalid-parameter-type2.stderr
error: expected builder attribute to be metadata, got literal instead
   |
22 |     #[builder("arg")]
   |               ^^^^^
